--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -42,38 +42,35 @@ body {
   font-family: var(--primary-font-name);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll;
 }
 
 .container {
   max-width: 960px;
-  margin: 0 auto;
+  margin: 40px auto;
   padding-right: 15px;
   padding-left: 15px;
 }
 
-/* -- Header -- */
+/* -- Interaction (buttons, hrefs, etc.) -- */
 
-.logo img {
-  margin-bottom: 6%;
-  width: 70%;
-  margin-top: 5%;
+.regular-button {
+  color: var(--color-primary);
+  border: none;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.regular-button:hover {
+  color: var(--color-special);
+  cursor: pointer;
 }
 
-.header a {
-  color: inherit;
-  text-decoration: none;
+.action-icon {
+  cursor: pointer;
+  color: var(--color-additional);
 }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 1rem;
+.action-icon:hover {
+  color: var(--color-secondary);
 }
 
 .auth-button,
@@ -89,6 +86,31 @@ nav ul {
 .auth-button:hover {
   border: 4px dashed var(--color-primary);
   color: var(--color-primary);
+}
+
+/* -- Header -- */
+
+.logo img {
+  width: 70%;
+
+}
+
+.header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header a {
+  color: inherit;
+  text-decoration: none;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
 }
 
 /* -- Search Box -- */
@@ -109,6 +131,8 @@ nav ul {
   background-color: var(--color-additional-2);
   font-family: var(--primary-font-name);
   font-size: 1rem;
+  width: 100%;
+  height: 30px;
 }
 
 .search input:focus {
@@ -183,25 +207,4 @@ textarea:focus {
   margin-left: 10px;
   border-left: 1px solid var(--color-additional);
   height: 100%;
-}
-
-/* -- Interaction (buttons, hrefs, etc.) -- */
-
-.regular-button {
-  color: var(--color-primary);
-  border: none;
-}
-
-.regular-button:hover {
-  color: var(--color-special);
-  cursor: pointer;
-}
-
-.action-icon {
-  cursor: pointer;
-  color: var(--color-additional);
-}
-
-.action-icon:hover {
-  color: var(--color-secondary);
 }
