--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -22,6 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: scroll;
+  transition: background-color 0.5s;
 }
 
 body::-webkit-scrollbar {
@@ -48,6 +49,53 @@ body::-webkit-scrollbar-thumb {
 
 .back {
   overscroll-behavior: contain;
+  padding-bottom: 0 !important;
+  min-height: 100%;
+}
+
+
+.overlay {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  color:white;
+}
+
+.sidenav .form {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left 0.5s;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 
