--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -1,8 +1,12 @@
 .logo img {
+  position: absolute;
   max-width: 225px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 nav {
+  position: relative;
   margin-bottom: 30px;
   display: flex;
   justify-content: space-between;
@@ -11,6 +15,8 @@ nav {
 nav a {
   color: inherit;
   text-decoration: none;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 nav ul {
