--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -58,14 +58,6 @@ body::-webkit-scrollbar-thumb {
   padding-left: 15px;
 }
 
-/*
-.back {
-  overscroll-behavior: contain;
-  padding-bottom: 0 !important;
-  min-height: 100%;
-}
-*/
-
 .overlay {
   position: fixed;
   z-index: 1;
@@ -143,7 +135,7 @@ select:-webkit-autofill:focus {
   z-index: 101;
   position: absolute;
   top: 50%;
-  transform: translateY(-60%);
+  transform: translateY(-50%);
   color: #999;
   font-size: 23px;
 }
@@ -181,7 +173,7 @@ select:-webkit-autofill:focus {
 
 /* Checkbox and remember me */
 .form .form-bottom {
-  margin-top: 20px;
+  margin-top: 40px;
   display: flex;
   justify-content: space-between;
 }
@@ -231,13 +223,9 @@ select:-webkit-autofill:focus {
   border-bottom: 2px solid var(--color-special);
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
+.input-checkbox input
+.input-checkbox label {
+  vertical-align: middle;
 }
 
 
