--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -45,6 +45,25 @@ nav ul {
   color: var(--color-primary);
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn {
+  vertical-align: middle;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
 @media screen and (max-width: 450px) {
   nav {
     flex-direction: column;
