Add switch form button

--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -38,6 +38,9 @@ nav ul {
   color: var(--color-additional-3);
   cursor: pointer;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
+  align-content: space-between;
 }
 
 .auth-button:hover {
