--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -63,6 +63,8 @@ body::-webkit-scrollbar-thumb {
   z-index: 1;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   width: 100vw;
   height: 100vh;
   transition: background-color 0.5s;
@@ -74,10 +76,11 @@ body::-webkit-scrollbar-thumb {
   position: fixed;
   z-index: 100;
   top: 0;
-  right: 0;
+  right: -1200px;
+  width: 520px;
   background-color: black;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.4s;
   color:white;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
 }
@@ -221,7 +224,7 @@ select:-webkit-autofill:focus {
 
 /* Moving smoothly main content to the left */
 #main {
-  transition: margin-right 0.5s;
+  transition: margin-right 0.7s;
 }
 
 .button input {
