Improve style of website with SVG logo

--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -1,6 +1,6 @@
 .logo img {
   position: absolute;
-  max-width: 100%;
+  max-width: 210px;
   height: auto;
   display: inline-block;
   vertical-align: middle;
