--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -1,7 +1,7 @@
 .logo img {
   max-width: 255px;
   height: auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 header {
@@ -48,18 +48,17 @@ nav a {
 .dropdown-content {
   display: none;
   position: absolute;
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 250px;
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.drop-btn {
-  vertical-align: middle;
   display: flex;
-  justify-content: space-between;
-  gap: 10px;
+  flex-direction: column;
 }
