--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -77,7 +77,7 @@ body::-webkit-scrollbar-thumb {
   z-index: 100;
   top: 0;
   right: -1200px;
-  width: 520px;
+  width: 560px;
   background-color: black;
   overflow-x: hidden;
   transition: 0.4s;
@@ -104,7 +104,7 @@ body::-webkit-scrollbar-thumb {
   outline: none;
   background-color: black;
   color:white;
-  font-size: 16px;
+  font-size: 22px;
   transition: all 0.2s ease;
   border-bottom: 2px solid #ccc;
 }
@@ -158,7 +158,7 @@ select:-webkit-autofill:focus {
 
 .sidenav .form .auth-header {
   position: relative;
-  font-size: 27px;
+  font-size: 30px;
   font-weight: 600;
   margin-top: 16.6px;
   color: white;
@@ -189,6 +189,7 @@ select:-webkit-autofill:focus {
   margin-top: 40px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .input-checkbox input {
@@ -207,7 +208,7 @@ select:-webkit-autofill:focus {
 
 .form .text {
   color: var(--color-additional-2);
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .form-header {
@@ -217,7 +218,7 @@ select:-webkit-autofill:focus {
 
 .close {
   color: #aaaaaa;
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -264,11 +265,11 @@ select:-webkit-autofill:focus {
 }
 
 .disclaimer {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 input[type=checkbox] {
-  transform: scale(1.2);
+  transform: scale(1.4);
 }
 
 .accordion {
