Add sorting by newest and oldest working with dnd

--- a/clientapp/src/components/Core/Search.css
+++ b/clientapp/src/components/Core/Search.css
@@ -33,3 +33,10 @@
   color: gray;
   font-family: "Karla", sans-serif;
 }
+
+.sort-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  cursor: #333;
+}
