Fix migration and update HTTP responses

--- a/clientapp/src/components/Header.css
+++ b/clientapp/src/components/Header.css
@@ -63,3 +63,9 @@ nav a {
   display: flex;
   flex-direction: column;
 }
+
+.drop-btn {
+  display: flex;
+  vertical-align: middle;
+  gap: 6px;
+}
