--- a/clientapp/src/components/Core/NotesList.css
+++ b/clientapp/src/components/Core/NotesList.css
@@ -44,6 +44,15 @@ textarea:focus {
   font-size: 1.4rem;
   line-height: 1.5;
   max-height: 102px;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .note.new {
