--- a/clientapp/src/index.css
+++ b/clientapp/src/index.css
@@ -22,6 +22,16 @@ html {
   box-sizing: inherit;
 }
 
+.waiting {
+  cursor: wait !important;
+  pointer-events: none !important;
+
+  -moz-user-select: none !important;
+  -webkit-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
 body {
   background-color: rgb(225, 225, 225);
   margin: 0;
