--- a/clientapp/src/pages/AccountSettings.css
+++ b/clientapp/src/pages/AccountSettings.css
@@ -22,7 +22,7 @@
     padding: 15px 15px 15px 45px;
     font-size: 18px;
     border-bottom: 1px solid #2d374d;
-    color: #999;
+    color: black;
     position: relative;
     margin-right: 60px;
   }
